fixed ipad landscape spacing

--- a/assets/sass/vha/pages/home/fellowship-impact/_index.scss
+++ b/assets/sass/vha/pages/home/fellowship-impact/_index.scss
@@ -6,7 +6,7 @@
       padding: 0 !important;
     }
 
-    @media screen and (min-width: 1025px) {
+    @media screen and (min-width: 1200px) {
       .bottom-section {
         margin-top: 50%;
       }
